--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.config.import=optional:configserver:http://localhost:8888
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.sleuth.propagation.type=w3c
 otel.exporter.otlp.traces.endpoint=http://otel-collector:4317
+management.tracing.enabled=true
