--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -3,3 +3,12 @@ server.port=8765
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 spring.cloud.gateway.discovery.locator.enabled=true
+
+management.endpoints.web.exposure.include=*
+management.tracing.sampling.probability=1.0
+management.metrics.distribution.percentiles-histogram.greeting=true
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+
+spring.output.ansi.enabled=always
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
