--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -3,3 +3,11 @@ server.port=8100
 spring.config.import=optional:configserver:http://localhost:8888
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+management.endpoints.web.exposure.include=*
+management.tracing.sampling.probability=1.0
+management.metrics.distribution.percentiles-histogram.greeting=true
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+
+spring.output.ansi.enabled=always
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
