--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.h2-console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+management.endpoints.web.exposure.include=*
+management.tracing.sampling.probability=1.0
+management.metrics.distribution.percentiles-histogram.greeting=true
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+
+spring.output.ansi.enabled=always
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
